--- a/paper/references.bib
+++ b/paper/references.bib
@@ -8,13 +8,13 @@
 	year = {2021}
 }
 
-@misc{PGA2022,
-    title = {Statistics of PGA Tournaments During the 2022 Season},
-    author = {{Alyssa Bigness} and {PGA Tour}},
-    year = {2023},
+@misc{NBA,
+    title = {NBA drafts between the years 1990-2021},
+    author = {{Vivian Johnson} and {NCAA} and {Ben Wieland}},
+    year = {2024},
     publisher = {SCORE Sports Data Repository},
-    howpublished = {\url{https://www.score.com/data/pga2022}},
-    note = {Original data sourced from PGA Tour statistics (pgatour.com). License terms were not explicitly provided. Used for academic purposes under fair use.}
+    howpublished = {\url{https://data.scorenetwork.org/basketball/nba_draft_1990-2021.html}},
+    note = {Original data sourced from NCAA under CC0: Public Domain license.}
 }
 
 @Manual{Base_R,
@@ -80,13 +80,13 @@
   url = {https://CRAN.R-project.org/package=here},
 }
 
-@misc{PGAtour,
-    title = {PGA Tour Stats},
-    author = {PGA Tour},
+@misc{Ex1,
+    title = {NBA player types and salaries: assessing the disparities in pay},
+    author = {{Nick Riccardi} and {Rodney J. Paul}},
     year = {2025},
-    publisher = {PGA Tour},
-    howpublished = {\url{https://www.pgatour.com/stats}},
-    note = {Official PGA Tour website}
+    publisher = {Syracuse University},
+    howpublished = {\url{https://surface.syr.edu/cgi/viewcontent.cgi?article=1068&context=sportmanagement}},
+    note = {Example paper on NBA data}
 }
 
 @misc{strokes_gained,
@@ -95,5 +95,12 @@
     year = {2025},
     publisher = {Shotscope},
     howpublished = {\url{https://shotscope.com/blog/practice-green/stats-and-data/understanding-strokes-gained/}}
+}
+
+@Manual{glmnet,
+  title = {Regularization Paths for Generalized Linear Models via Coordinate Descent},
+  author = {Friedman J and Hastie T and Tibshirani R},
+  year = {2010},
+  url = {https://doi.org/10.18637/jss.v033.i01},
 }
 
